--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
     </div>
 </div>
 
+<div class="arrows" id="a1"></div>
+<div class="arrows" id="a2"></div>
+<div class="arrows" id="a3"></div>
+<div class="arrows" id="a4"></div>
+
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/gameLogic.js"></script>
 
